# AirPad

./: .gitignore  audit-2026-04-30.md  debug_tom_mcjazz.swift  project.yml  run_gate_diagnostic.swift  run_gate_diagnostic_v2.swift  run_router_diagnostic.swift  run_router_diagnostic_baseline.swift  run_session4_diagnostic.swift  show_commit_clean_sample.swift
AirPad/: AirPad.entitlements  Info.plist
AirPad.xcodeproj/: project.pbxproj
AirPadShare/: AirPadShare.entitlements  Info.plist  ShareViewController.swift
fm-diagnostic-harness/: Package.swift  corpus-clusters.json  corpus-similarity.json  embeddings-round4.json  embeddings.json  outliers_section7.py  results-A1.json  results-A2.json  results-A3.json  results-A4.json  results-A5.json  results-A6.json  summary-round2.md  summary-round3.md  (+4 more)
umap-reference-harness/: .gitignore  CMakeLists.txt  README.md  decisions.md
umap-reference-harness/fixtures/: discrete_uniform_seed42_bound1000.json  discrete_uniform_seed42_bound_pow63.json  find_ab_alt.json  find_ab_default.json  generate_synthetic.py  mt19937_64_seed42.json  splitmix64_seed42.json  standard_uniform_seed42.json  synth_200x16.json  synth_50x4.json
umap-reference-harness/scripts/: swift_discrete_uniform_parity.swift  swift_find_ab_parity.swift  swift_fit_parity.swift  swift_fuzzy_parity.swift  swift_knn_parity.swift  swift_random_init_parity.swift  swift_rng_parity.swift  swift_sgd_parity.swift  swift_status_parity.swift  swift_substrate_duplicate_scan.swift  swift_uniform_parity.swift
umap-reference-harness/src/: json_io.cpp  json_io.h  main.cpp
(+193 files in other folders)
